peac_dev/force-app/main/default/objects/Contract_Attachment__c/Contract_Attachment__c.object-meta.xml
<CustomObject>
    <description>this will use OnBase</description>
    <label>Contract Attachment</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>