peac_dev/force-app/main/default/objects/Contract_Attachment__c/fields/isFromDocGen__c.field-meta.xml
<CustomField>
    <fullName>isFromDocGen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to send automatically to OnBase when they attach the file</description>
    <label>isFromDocGen</label>
    <type>Checkbox</type>
</CustomField>