peac_dev/force-app/main/default/objects/Contract_Attachment__c/fields/OnBase_Response__c.field-meta.xml
<CustomField>
    <fullName>OnBase_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OnBase Response</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>