peac_dev/force-app/main/default/objects/Contract_Attachment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Document Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_Group__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CL - Credit Bureau Reports</fullName>
            </value>
            <value>
                <fullName>CL - Customer Correspondence</fullName>
            </value>
            <value>
                <fullName>CL - Demand Letters</fullName>
            </value>
            <value>
                <fullName>CL - Investigations</fullName>
            </value>
            <value>
                <fullName>CL - Misc</fullName>
            </value>
            <value>
                <fullName>CS - Address Change</fullName>
            </value>
            <value>
                <fullName>CS - Assumption / Restructure Documentation</fullName>
            </value>
            <value>
                <fullName>CS - Change Request</fullName>
            </value>
            <value>
                <fullName>CS - EOT Form</fullName>
            </value>
            <value>
                <fullName>CS - Letters of Intent</fullName>
            </value>
            <value>
                <fullName>CS - Misc</fullName>
            </value>
            <value>
                <fullName>CS - Tax Exempt Certificates</fullName>
            </value>
            <value>
                <fullName>FS - ACH_Auto Debit Forms and Copy of Check</fullName>
            </value>
            <value>
                <fullName>FS - Additional Stipulations</fullName>
            </value>
            <value>
                <fullName>FS - Bank Account Change Request</fullName>
            </value>
            <value>
                <fullName>FS - Bank Statements</fullName>
            </value>
            <value>
                <fullName>FS - Bank Statements - Apr</fullName>
            </value>
            <value>
                <fullName>FS - Bank Statements - Aug</fullName>
            </value>
            <value>
                <fullName>FS - Bank Statements - Dec</fullName>
            </value>
            <value>
                <fullName>FS - Bank Statements - Feb</fullName>
            </value>
            <value>
                <fullName>FS - Bank Statements - Jan</fullName>
            </value>
            <value>
                <fullName>FS - Bank Statements - Jul</fullName>
            </value>
            <value>
                <fullName>FS - Bank Statements - Jun</fullName>
            </value>
            <value>
                <fullName>FS - Bank Statements - Mar</fullName>
            </value>
            <value>
                <fullName>FS - Bank Statements - May</fullName>
            </value>
            <value>
                <fullName>FS - Bank Statements - Nov</fullName>
            </value>
            <value>
                <fullName>FS - Bank Statements - Oct</fullName>
            </value>
            <value>
                <fullName>FS - Bank Statements - Sept</fullName>
            </value>
            <value>
                <fullName>FS - Bank Statements MTD</fullName>
            </value>
            <value>
                <fullName>FS - Blank Loan Documents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>