peac_dev/force-app/main/default/objects/Contract_Attachment__c/fields/Type_Group__c.field-meta.xml
<CustomField>
    <fullName>Type_Group__c</fullName>
    <label>Document Type Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collections</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Funding Stream</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Titled Vehicles</fullName>
            </value>
            <value>
                <fullName>Lease Contract</fullName>
            </value>
            <value>
                <fullName>Asset Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>