peac_dev/force-app/main/default/objects/Contract_Attachment__c/fields/Updated_Rapport__c.field-meta.xml
<CustomField>
    <fullName>Updated_Rapport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated Rapport</label>
    <type>Checkbox</type>
</CustomField>