peac_dev/force-app/main/default/objects/Contract_Attachment__c/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <formula>IF(Document_URL__c = null, HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot; + Attachment__c, &quot;View&quot;), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Document</label>
    <type>Text</type>
</CustomField>